--- a/src/app/modules/enterprise/views/add-user/enterprise.component.html
+++ b/src/app/modules/enterprise/views/add-user/enterprise.component.html
@@ -3,7 +3,8 @@
 
     <div class="col-12 col-md-4">
         <div class="text-center">
-            <img class="rounded-circle" alt="50x50" src="https://mdbootstrap.com/img/Photos/Avatars/img%20(30).jpg" data-holder-rendered="true">
+            <img class="rounded-circle" alt="100x100" src="https://scontent.fmch2-1.fna.fbcdn.net/v/t1.6435-9/s851x315/46396467_2207519019282521_8612939446154690560_n.jpg?_nc_cat=104&ccb=1-3&_nc_sid=e33968&_nc_eui2=AeF5o7XFvCdLpN6D1JUbJ6hutDoi__CMoGW0OiL_8IygZSHTaAmXzLnYdqgPKwongrt6HUey-Tjt2OK2ZZdnFjw9&_nc_ohc=V3paXgLAU80AX_gaEFQ&_nc_ht=scontent.fmch2-1.fna&tp=7&oh=e0ef5b7ffc1d58a8e35ac6243ce74c45&oe=60A61325"
+                data-holder-rendered="true">
         </div>
         <br>
         <div class="form-check">
