--- a/src/app/core/components/modal/modal.component.html
+++ b/src/app/core/components/modal/modal.component.html
@@ -2,11 +2,11 @@
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
-        <img src="/assets/img/startlogin.png" alt="logo" height="30px">
+        <img src="/assets/img/logo.png" alt="logo" height="20px" class="rounded-circle me-2">
         <h6 class="modal-title" id="exampleModalLabel">{{ title ? title + ' | ' +appName  : title }}</h6>
         <button type="button" #closebutton class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
-      <div class="modal-body">
+      <div [class]="'modal-body '+extraClass">
         <ng-content select="[body]"></ng-content>
       </div>
       <div class="modal-footer" *ngIf="showFooter">
