--- a/src/app/modules/invoice/components/method-payment/method-payment.component.html
+++ b/src/app/modules/invoice/components/method-payment/method-payment.component.html
@@ -1,5 +1,63 @@
-<app-modal [title]="'Método de pago'" idModal="modalPayments" [showFooter]="false">
+<app-modal [title]="'Método de pago'" idModal="modalPayments" [showFooter]="true" extraClass="px-1 pt-0">
   <div body>
-    Hola
+    <div class="method_payment" id="pay">
+      <table class="table table-sm table-bordered">
+        <thead>
+        <tr>
+          <th>Forma/Pago</th>
+          <th>Banco/Tarjeta</th>
+          <th>Detalle/Voucher</th>
+          <th>Valor</th>
+          <th class="text-end"></th>
+        </tr>
+        </thead>
+        <tbody id="paymentContent">
+          <ng-container *ngIf="payments && payments.length > 0">
+            <tr *ngFor="let p of payments">
+              <td style="width: 15%">
+                <select name="typePayment" class="form-select form-select-sm" [(ngModel)]="p.type">
+                  <option *ngFor="let tp of typePayments" value="{{ tp.code}}">{{ tp.text}}</option>
+                </select>
+              </td>
+              <td style="width: 25%">
+                <select name="bank" class="form-select form-select-sm" [(ngModel)]="p.bank">
+                  <option *ngFor="let b of banks" value="{{ b }}">{{ b}}</option>
+                </select>
+              </td>
+              <td data-name="Detalle">
+                <input type="text" class="form-control-plaintext form-control-sm" value="" [(ngModel)]="p.desc"
+                       placeholder="Detalle: 00000XXXX">
+              </td>
+              <td data-name="Valor" class="text-end" style="width: 11%">
+                <input type="number" min="0" value="0" [(ngModel)]="p.value"
+                       class="form-control form-control-plaintext form-control-sm" placeholder="0.000">
+              </td>
+              <td style="width: 1%">
+                <button class="btn btn-sm text-danger btnRemove"><i class="fa fa-trash"></i></button>
+              </td>
+            </tr>
+          </ng-container>
+          <tr *ngIf="payments.length <= 0">
+            <td colspan="4" class="text-center text-muted">Presione en botón "+" para agregar otras formas de pago</td>
+          </tr>
+        </tbody>
+      </table>
+
+      <div class="px-1 d-flex align-items-center">
+        <div class="input-group">
+          <span class="input-group-text" id="label-total">Total Pago $:</span>
+          <input type="text" class="form-control" id="total" aria-describedby="total">
+        </div>
+        <div class="input-group">
+          <span class="input-group-text" id="label-cambio">Su Cambio $:</span>
+          <input type="text" class="form-control" id="cambio" aria-describedby="cambio" readonly>
+        </div>
+
+        <button class="btn btn-outline-success w-50" (click)="addPayMethod()"><i class="fa fa-plus" ></i> Agregar F. Pago</button>
+      </div>
+    </div>
+  </div>
+  <div btn>
+    <button class="btn btn-primary"><i class="fa fa-check me-2"></i>Guardar Factura</button>
   </div>
 </app-modal>
