--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -14,8 +14,8 @@
                         <li class="dropdown-submenu">
                             <a class="dropdown-item dropdown-submenu-toggle dropdown-toggle-arrow" href="#"><svg class="icon"><use xlink:href="#customer"/></svg>Clientes</a>
                             <ul class="dropdown-menu dropdown-menu-dark dropdown-submenu shadow">
-                              <li><a class="dropdown-item" routerLink="/persons">Listar Clientes</a></li>
-                              <li><a class="dropdown-item" routerLink="/persons/add">Nuevo Cliente</a></li>
+                                <li><a class="dropdown-item" routerLink="/persons">Listar Clientes</a></li>
+                                <li><a class="dropdown-item" routerLink="/persons/add">Nuevo Cliente</a></li>
                             </ul>
                         </li>
                         <!--Proveedores-->
@@ -36,7 +36,7 @@
                                 <li><a class="dropdown-item" routerLink="/inventory/adjust">Ajuste de Inventario</a></li>
                                 <li class="dropdown-divider dark"></li>
                                 <li><a class="dropdown-item" routerLink="/products/categories">Categorías</a></li>
-                              <li class="dropdown-divider"></li>
+                                <li class="dropdown-divider"></li>
                             </ul>
                         </li>
                         <!--Compras-->
@@ -60,21 +60,21 @@
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="true">Configuración</a>
-                  <ul class="dropdown-menu dropdown-menu-dark drop">
-                    <li class="dropdown-submenu">
-                      <a class="dropdown-item" routerLink="/config">Perfil de empresa</a>
-                    </li>
-                    <li class="dropdown-submenu">
-                      <a class="dropdown-item" routerLink="/config">Configuración General</a>
-                    </li>
-                    <li class="dropdown-submenu">
-                      <a class="dropdown-item" routerLink="/config">Usuarios</a>
-                    </li>
-                    <li class="dropdown-submenu">
-                      <a class="dropdown-item" routerLink="/config">Roles y Permisos</a>
-                    </li>
-                  </ul>
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="true">Configuración</a>
+                    <ul class="dropdown-menu dropdown-menu-dark drop">
+                        <li class="dropdown-submenu">
+                            <a class="dropdown-item" routerLink="/enterprise">Perfil de empresa</a>
+                        </li>
+                        <li class="dropdown-submenu">
+                            <a class="dropdown-item" routerLink="/config">Configuración General</a>
+                        </li>
+                        <li class="dropdown-submenu">
+                            <a class="dropdown-item" routerLink="/users">Usuarios</a>
+                        </li>
+                        <li class="dropdown-submenu">
+                            <a class="dropdown-item" routerLink="/roles/add">Roles y Permisos</a>
+                        </li>
+                    </ul>
                 </li>
             </ul>
         </div>
