--- a/src/app/modules/roles/views/add-rol/add-rol.component.html
+++ b/src/app/modules/roles/views/add-rol/add-rol.component.html
@@ -9,64 +9,14 @@
 
     </div>
 
-    <div class="col-12 col-md-6">
+    <div class="divider-vertical"></div>
+
+    <div class="col-12 col-md-5 text-center" *ngIf="permissions.length <= 0">
+        <H5 for="name" class="form-label">Aún no se han agregado permisos</H5>
+    </div>
+
+    <div class="col-12 col-md-4" *ngIf="permissions.length > 0">
         <label for="name" class="form-label">Permisos</label>
-
-        <!-- <div class="accordion" id="accordionExample">
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingOne">
-                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapse">
-                        Modulo 1
-                    </button>
-                </h2>
-                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" id="id">
-                            <label class="form-check-label">
-                                1
-                            </label>
-                        </div>
-                    </div>
-                    <div class="accordion-body">
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" id="id">
-                            <label class="form-check-label">
-                                2
-                            </label>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="accordion" id="accordionExample">
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingOne">
-                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{formData.id}}" aria-expanded="true" aria-controls="collapse">
-                        Modulo 2
-                    </button>
-                </h2>
-                <div id="collapseTwo" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" id="id">
-                            <label class="form-check-label">
-                                1
-                            </label>
-                        </div>
-                    </div>
-                    <div class="accordion-body">
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" id="id">
-                            <label class="form-check-label">
-                                2
-                            </label>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> -->
-
         <div *ngFor="let tM of tagsModules; Index as i" class="accordion" id="accordionPather">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="headingOne">
