--- a/src/assets/scss/components/_form.scss
+++ b/src/assets/scss/components/_form.scss
@@ -1,29 +1,50 @@
 .form-icon {
-  display: flex;
-  align-items: center;
-  i {
-    margin-right: .5rem;
-    color: $gray-500;
-  }
+    display: flex;
+    align-items: center;
+    i {
+        margin-right: .5rem;
+        color: $gray-500;
+    }
 }
 
 .label-title {
-  color: $gray-400;
-  font-weight: 500;
-  position: relative;
-  overflow: hidden;
-  display: block;
-  margin: .4rem 0;
-  span {
-    background: inherit;
-  }
-  &::after {
-    content: " ";
-    width: 100%;
-    height: 1px;
-    background: $gray-200;
-    display: inline-block;
-    position: absolute;
-    top: calc(50% + 2px);
-  }
+    color: $gray-400;
+    font-weight: 500;
+    position: relative;
+    overflow: hidden;
+    display: block;
+    margin: .4rem 0;
+    span {
+        background: inherit;
+    }
+    &::after {
+        content: " ";
+        width: 100%;
+        height: 1px;
+        background: $gray-200;
+        display: inline-block;
+        position: absolute;
+        top: calc(50% + 2px);
+    }
+}
+
+.circle-img {
+    width: 150px;
+    height: 150px;
+    overflow: hidden;
+}
+
+.circle-img img {
+    height: 100%;
+    transform: translateX(-50%);
+    margin-left: 50%;
+}
+
+.divider-vertical {
+    border: none;
+    margin-right: 10px;
+    margin-left: 15px;
+    border-left: 1px solid $gray-400;
+    height: auto;
+    width: 1px;
 }
