--- a/src/app/modules/invoice/components/method-payment/method-payment.component.html
+++ b/src/app/modules/invoice/components/method-payment/method-payment.component.html
@@ -73,7 +73,7 @@
     </div>
   </div>
   <div btn>
-    <button class="btn btn-primary"
+    <button class="btn btn-primary" type="button"
             (click)="onSubmit()"
             [disabled]="(total < totalAPagar)"><i class="fa fa-check me-2"></i>Guardar Factura</button>
   </div>
