--- a/src/app/modules/invoice/views/create-invoice/create-invoice.component.html
+++ b/src/app/modules/invoice/views/create-invoice/create-invoice.component.html
@@ -2,7 +2,7 @@
   <div class="card-body">
     <div class="row">
       <div class="col-12 col-md-6">
-        <app-select-person></app-select-person>
+        <app-select-person (select)="onSelectPerson($event)"></app-select-person>
       </div>
       <div class="col-12 col-md-6">
         <div class="row g-2">
@@ -23,7 +23,7 @@
             </select>
           </div>
           <div class="col-12 col-md-4">
-            <select class="form-select">
+            <select class="form-select" [(ngModel)]="formData.methodPay">
 
               <ng-container *ngIf="typePayments && typePayments.length > 0">
                 <option *ngFor="let pay of typePayments" [value]="pay.id">{{pay.text}}</option>
@@ -88,7 +88,7 @@
           <div class="col-12 btn-group align-items-start">
             <button class="btn btn-light me-2"><i class="fa fa-plus me-1 text-success"></i>Agregar artículos</button>
             <button class="btn btn-light me-2"><i class="fa fa-eraser me-1 text-warning"></i>Limpiar todo</button>
-            <button class="btn btn-primary" (click)="confirmPayment()"><i class="fa fa-save me-1"></i>Guardar Factura</button>
+            <bs-button (click)="confirmPayment()" [loader]="loader"><i class="fa fa-save me-1"></i>Guardar Factura</bs-button>
           </div>
         </div>
 
@@ -127,5 +127,5 @@
     </div>
   </div>
 </div>
-<app-method-payment (onComplete)="submit($event)" [totalAPagar]="total" ></app-method-payment>
+<app-method-payment (onComplete)="submit($event)" [totalAPagar]="total" [selectedPay]="formData.methodPay" ></app-method-payment>
 
