--- a/src/app/modules/inventory/articles/components/frm-product/frm-product.component.html
+++ b/src/app/modules/inventory/articles/components/frm-product/frm-product.component.html
@@ -7,7 +7,9 @@
     <div class="col-12 col-md-6">
         <label for="category_id" class="form-label">Categoría: *</label>
         <div class="input-group">
-            <input type="text" id="category_id" [(ngModel)]="formData.category_id? formData.category_id : category.id" (keypress)="onSearchCategory($event)" name="category_id" class="form-control">
+            <div class="col-12 col-md-2">
+                <input type="text" id="category_id" [(ngModel)]="formData.category_id? formData.category_id : category.id" (keypress)="onSearchCategory($event)" name="category_id" class="form-control">
+            </div>
             <input type="text" id="category" [(ngModel)]="formData.category? formData.category : category.name" name="category" class="form-control" readonly>
             <app-add-category (create)="onSelectCategory($event)"></app-add-category>
             <app-dialog-search-category (select)="onSelectCategory($event)"></app-dialog-search-category>
@@ -44,7 +46,7 @@
         <div class="row g-2">
             <div class="div col-3 col-md-3">
                 <label for="product_price" class="form-label" required>P. Costo</label>
-                <input type="number" min="0" id="product_price" [(ngModel)]="formData.price_purchase" name="product_price" class="form-control" (input)="onInputPrice($event.target.value)" step="any">
+                <input type="number" min="0" id="product_price" [(ngModel)]="formData.price_purchase" name="product_price" class="form-control" (input)="onInputPrice($event.target.value)" (change)="onInputPrice($event.target.value)" step="any">
             </div>
             <div class="div col-3 col-md-3">
                 <label for="product_pricePlusIva" class="form-label">P. Costo + IVA</label>
@@ -53,12 +55,12 @@
 
             <div class="div col-3 col-md-3">
                 <label for="product_utility" class="form-label">% Utilidad</label>
-                <input type="number" min="0" id="product_utility" [value]="utility" name="product_utility" class="form-control" (input)="onInputUtility($event.target.value)" step="any">
+                <input type="number" min="0" id="product_utility" [value]="utility" name="product_utility" class="form-control" (input)="onInputUtility($event.target.value)" (change)="onInputUtility($event.target.value)" step="any">
             </div>
 
             <div class="div col-3 col-md-3">
                 <label for="pvpIva" class="form-label">PVP + Iva</label>
-                <input type="number" min="0" id="pvpIva" name="pvpIva" (input)="onInputFinalPrice($event.target.value)" class="form-control" [value]="validate.round(pvpIva)"  step="any">
+                <input type="number" min="0" id="pvpIva" name="pvpIva" (input)="onInputFinalPrice($event.target.value)" class="form-control" [value]="validate.round(pvpIva)" (change)="onInputFinalPrice($event.target.value)" step="any">
             </div>
         </div>
     </div>
