--- a/src/app/modules/inventory/articles/components/select-product/select-product.component.html
+++ b/src/app/modules/inventory/articles/components/select-product/select-product.component.html
@@ -1,40 +1,25 @@
 <label class="label-title mb-0">Producto/Servicio</label>
 <div class="row g-2 mt-0">
-  <div class="col-6 col-md-3">
-    <input type="text" class="form-control" [(ngModel)]="code" id="code"
-           placeholder="Cod. Nombre. Desc." (keypress)="searchProduct($event)">
-  </div>
-  <div [class]="'col-6 col-md-'+(showCalc ? '4': '7')">
-    <input type="text" class="form-control" placeholder="Producto/Servicio" [ngModel]="selectProduct.name" readonly>
-  </div>
-  <div class="col-6 col-md-1">
-    <input type="number" class="form-control" placeholder="PVP" readonly [ngModel]="selectProduct.pvp">
-  </div>
-  <div class="col-6 col-md-1">
-    <input type="number" class="form-control" placeholder="Cantidad"
-           onfocus="this.select()"
-           (input)="calc()"
-           (change)="calc()"
-           (keypress)="emitArticle($event)"
-           [(ngModel)]="selectProductCalc.qty"
-           id="qty" value="1">
-  </div>
-  <!--extra values-->
-  <div class="col-6 col-md-1" *ngIf="showCalc">
-    <input type="number" class="form-control" placeholder="Desc %" value="0"
-           (input)="calc()"
-           (change)="calc()"
-           (keypress)="emitArticle($event)"
-           [(ngModel)]="selectProductCalc.discount">
-  </div>
-  <div class="col-6 col-md-1" *ngIf="showCalc">
-    <input type="number" class="form-control" placeholder="Total"
-           [value]="validate.round(selectProductCalc.total)"
-           readonly>
-  </div>
-  <div class="col-6 col-md-1" *ngIf="showCalc">
-    <input type="number" class="form-control" placeholder="Total+Iva"
-           [value]="validate.round(selectProductCalc.totalIva)"
-           readonly>
-  </div>
+    <div class="col-6 col-md-3">
+        <input type="text" class="form-control" [(ngModel)]="code" id="code" placeholder="Cod. Nombre. Desc." (keypress)="searchProduct($event)">
+    </div>
+    <div [class]="'col-6 col-md-'+(showCalc ? '4': '7')">
+        <input type="text" class="form-control" placeholder="Producto/Servicio" [ngModel]="selectProduct.name" readonly>
+    </div>
+    <div class="col-6 col-md-1">
+        <input type="number" class="form-control" placeholder="PVP" readonly [ngModel]="selectProduct.pvp">
+    </div>
+    <div class="col-6 col-md-1">
+        <input type="number" class="form-control" placeholder="Cantidad" onfocus="this.select()" (input)="calc()" (change)="calc()" (keypress)="emitArticle($event)" [(ngModel)]="selectProductCalc.qty" id="qty" value="1" min="1" [max]="selectProduct.stock">
+    </div>
+    <!--extra values-->
+    <div class="col-6 col-md-1" *ngIf="showCalc">
+        <input type="number" class="form-control" placeholder="Desc %" value="0" (input)="calc()" (change)="calc()" (keypress)="emitArticle($event)" [(ngModel)]="selectProductCalc.discount" min="0">
+    </div>
+    <div class="col-6 col-md-1" *ngIf="showCalc">
+        <input type="number" class="form-control" placeholder="Total" [value]="validate.round(selectProductCalc.total)" readonly>
+    </div>
+    <div class="col-6 col-md-1" *ngIf="showCalc">
+        <input type="number" class="form-control" placeholder="Total+Iva" [value]="validate.round(selectProductCalc.totalIva)" readonly>
+    </div>
 </div>
