--- a/src/app/modules/persons/components/frm-person/frm-person.component.html
+++ b/src/app/modules/persons/components/frm-person/frm-person.component.html
@@ -38,11 +38,11 @@
         <div class="row g-2">
             <div class="div col-6 col-md-4">
                 <label for="phone" class="form-label">Celular/Teléfono</label>
-                <input type="tel" id="phone" [(ngModel)]="formData.phone" name="phone" class="form-control">
+                <input type="number" id="phone" [(ngModel)]="formData.phone" name="phone" class="form-control">
             </div>
             <div class="div col-6 col-md-4">
                 <label for="email" class="form-label">Email</label>
-                <input type="email" id="email" [(ngModel)]="formData.email" name="email" class="form-control">
+                <input type="email" id="email" [(ngModel)]="formData.email" name="email" class="form-control" required>
             </div>
 
             <div class="div col-6 col-md-4">
