--- a/src/app/modules/roles/views/add-rol/add-rol.component.html
+++ b/src/app/modules/roles/views/add-rol/add-rol.component.html
@@ -15,28 +15,36 @@
         <H5 for="name" class="form-label">Aún no se han agregado permisos</H5>
     </div>
 
+    <!-- '#collapse' + tM[1]  data-bs-target-->
     <div class="col-12 col-md-4" *ngIf="permissions.length > 0">
         <label for="name" class="form-label">Permisos</label>
-        <div *ngFor="let tM of tagsModules; Index as i" class="accordion" id="accordionPather">
+        <div *ngFor="let tM of tagsModules" class="accordion" id="accordionFather">
             <div class="accordion-item">
-                <h2 class="accordion-header" id="headingOne">
-                    <button class="accordion-button" type="button" data-bs-toggle="collapse" [attr.data-target]="'#collapse' + tM[1].toString()" aria-expanded="true" aria-controls="collapse">
+
+                <h2 class="accordion-header" id="{{'heading'+tM[1]}}">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse" [attr.data-bs-target]="'#collapse'+tM[1]" aria-expanded="true" [attr.aria-controls]="'collapse' + tM[1]">
                         <div class="form-check">
-                            <input class="form-check-input" type="checkbox" id="title" (change)="checkAllPermissions(tM, $event.target.checked)">
+                            <input class="form-check-input" type="checkbox" id="checkTest"
+                                (change)="checkAllPermissions(tM, $event.target.checked)">
                         </div>
                         Modulo {{tM[1]}}
                     </button>
                 </h2>
-                <div id="'collapse' + tM[1]" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionPather" *ngFor="let p of permissions">
-                    <div class="accordion-body" *ngIf="p.parent == tM[0]">
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" id="{{'permiso' + p.id}}" (change)="onCheckPermiso(p.id, $event.target.checked)">
-                            <label class="form-check-label">
-                                {{p.name}}
-                            </label>
+
+
+                <div class="accordion-collapse collapse show" id="{{'collapse' + tM[1]}}" [attr.aria-labelledby]="'heading'+tM[1]" data-bs-parent="#accordionFather">
+                    <div *ngFor="let p of permissions">
+                        <div class="accordion-body" *ngIf="p.parent == tM[0]">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" id="{{'permiso' + p.id}}" [checked]="p.addToRol" (change)="onCheckPermiso(p.id, $event.target.checked)">
+                                <label class="form-check-label">
+                                    {{p.name}}
+                                </label>
+                            </div>
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
 
